<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MP3MusicApp</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next_song">Next Song</string>
    <string name="shuffle">Chế độ phát ngẫu nhiên</string>
    <string name="repeat">Chế độ lặp lại</string>
    <string name="repeat_one">Lặp lại một bài</string>
    <string name="repeat_off">Tắt lặp lại</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>