<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PlayMusicActivity">

    <TextView
        android:id="@+id/textViewSongTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Tên bài hát"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Tên nghệ sĩ"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSongTitle" />

    <TextView
        android:id="@+id/textViewAlbum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Album"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewArtistName" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="Năm"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlbum" />

    <SeekBar
        android:id="@+id/seekBarProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear" />

    <TextView
        android:id="@+id/textViewCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="0:00"
        app:layout_constraintStart_toStartOf="@+id/seekBarProgress"
        app:layout_constraintTop_toBottomOf="@+id/seekBarProgress" />

    <TextView
        android:id="@+id/textViewTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="3:30"
        app:layout_constraintEnd_toEndOf="@+id/seekBarProgress"
        app:layout_constraintTop_toBottomOf="@+id/seekBarProgress" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentTime">

        <ImageButton
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous_song"
            android:src="@drawable/ic_skip_previous" />

        <ImageButton
            android:id="@+id/buttonPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_song"
            android:src="@drawable/ic_skip_next" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="19dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/repeat"
        android:src="@drawable/ic_loop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalTime"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/buttonShuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/shuffle"
        android:src="@drawable/ic_shuffle"
        app:layout_constraintStart_toEndOf="@+id/buttonRepeat"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalTime" />

</androidx.constraintlayout.widget.ConstraintLayout>